# telemetry-collector

./: CMakeLists.txt  README.md
src/: batch_processor.cpp  batch_processor.h  chain.h  collector.cpp  collector.h  exporter.cpp  exporter.h  main.cpp  otlp_exporter.cpp  otlp_exporter.h  pipeline.cpp  pipeline.h  processor.cpp  processor.h  receiver.cpp  receiver.h
